# src/main/resources/openapi/eusage-reports-1.0.yaml
@@ -47,6 +47,30 @@ paths:
           $ref: "#/components/responses/trait_400"
         "500":
           $ref: "#/components/responses/trait_500"
+  /eusage-reports/report-titles/from-counter:
+    parameters:
+      - $ref: headers/okapi-tenant.yaml
+      - $ref: headers/okapi-token.yaml
+      - $ref: headers/okapi-url.yaml
+    post:
+      description: Parse counter reports
+      operationId: postFromCounter
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: schemas/fromCounterRequest.json
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: schemas/fromCounterResponse.json
+        "400":
+          $ref: "#/components/responses/trait_400"
+        "500":
+          $ref: "#/components/responses/trait_500"
 components:
   responses:
     trait_400:
